--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -17,5 +17,7 @@
       <div class="error">{{error}}</div>
 
       <input type="submit">
+
+    <a href="/blog" class="cancel">Cancel</a>
     </form>
 {% endblock %}
