--- a/templates/deletepost.html
+++ b/templates/deletepost.html
@@ -4,5 +4,6 @@
   Post has been deleted.
   <br>
   <br>
-  <a href = "/blog/">Go back home.</a>
+  <form method="post">
+  <a href = "/blog/">Go back home.</a></form>
 {% endblock %}
