--- a/templates/updatecomment.html
+++ b/templates/updatecomment.html
@@ -14,5 +14,6 @@
       <div class="error">{{error}}</div>
 
       <input type="submit">
+      <a href="/blog" class="cancel">Cancel</a>
     </form>
 {% endblock %}
