--- a/templates/login-form.html
+++ b/templates/login-form.html
@@ -1,46 +1,38 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html>
-  <head>
-    <title>Login</title>
-    <style type="text/css">
-      .label {text-align: right}
-    </style>
+  {% block content %}
+    {% if not log_error %}
+      <h2>Login</h2>
+      <form method="post">
+        <table>
+          <tr>
+            <td class="label">
+              Username
+            </td>
+            <td>
+              <input type="text" name="username" value="{{username}}">
+            </td>
+          </tr>
 
-  </head>
+          <tr>
+            <td class="label">
+              Password
+            </td>
+            <td>
+              <input type="password" name="password" value="">
+            </td>
+          </tr>
+        </table>
 
-  <body>
-    <h2>Login</h2>
-    <form method="post">
-      <table>
-        <tr>
-          <td class="label">
-            Username
-          </td>
-          <td>
-            <input type="text" name="username" value="{{username}}">
-          </td>
-        </tr>
+        <div class="error">
+          {{error}}
+        </div>
 
-        <tr>
-          <td class="label">
-            Password
-          </td>
-          <td>
-            <input type="password" name="password" value="">
-          </td>
-        </tr>
-      </table>
+        <input type="submit">
+      </form>
 
-      <div class="error">
-        {{error}}
-      </div>
-
-      <input type="submit">
-    </form>
-
-    <p>Not already a member? <a href="/signup">Sign up!</a></p>
-
-  </body>
-
-</html>
+      <p>Not already a member? <a href="/signup">Sign up!</a></p>
+    {% else %}
+    <div>{{log_error}}</div>
+    {% endif %}
+{% endblock%}
