--- a/templates/updatepost.html
+++ b/templates/updatepost.html
@@ -17,5 +17,6 @@
       <div class="error">{{error}}</div>
 
       <input type="submit">
+      <a href="/blog" class="cancel">Cancel</a>
     </form>
 {% endblock %}
