--- a/templates/deletepost.html
+++ b/templates/deletepost.html
@@ -5,5 +5,6 @@
   <br>
   <br>
   <form method="post">
-  <a href = "/blog/">Go back home.</a></form>
+  	<a href = "/blog/">Go back home.</a>
+  </form>
 {% endblock %}
